modified login page

--- a/html/index.html
+++ b/html/index.html
@@ -26,8 +26,13 @@
         <header>
             <img src="../images/Icon Logo-06.png" alt="Shop's logo" class="header__logo">
             <img src="../images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text">
-            <div class="header__cart"><a href="#"><i class="fa-solid fa-cart-shopping cart-icon"></i></a></div>
-        </header>
+            <div class="header__cart">
+                <a href="../html/cart.html">
+                    <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                </a>
+                <div id="cart-counter">2</div>
+            </div>
+            </header>
         <nav>
             <ul>
                 <li><a href="#" area-label="Visit home page">Home</a></li>
