--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/menu.html">Menu</a></li>
                 <li><a href="/review.html">Review</a></li>
@@ -57,11 +57,10 @@
             <label for="search-box" class="fas fa-search"></label>
         </div>
 
+
     </header>
 
-
-
-    
+   
 
     
 </body>
