--- a/review.html
+++ b/review.html
@@ -37,7 +37,7 @@
 
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/menu.html">Menu</a></li>
                 <li><a href="/review.html">Review</a></li>
@@ -58,7 +58,6 @@
         </div>
 
     </header>
-
 
 
     
