product details page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Ola Scent</title>
+    <title>Scents</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <nav>
-        <div class="logo">Ola Scent</div>
+        <div class="logo">Scents</div>
       <ul class="menu">
         <li><a href="http://">Home</a></li>
         <li><a href="http://">About Us</a></li>
@@ -34,44 +34,60 @@
 
    <section id="product-section">
     <div class="product-grid">
-      <div class="product">
-        <img src="/assets/product1.jpg" alt="Product 1">
+      <article class="product">
+        <img src="/assets/product1.png" alt="Product 1">
         <h3>Product 1</h3>
         <div class="price">$19.99</div>
         <button>Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="/assets/product2.jpg" alt="Product 2">
+      </article>
+      <article class="product">
+        <img src="/assets/product2.png" alt="Product 2">
         <h3>Product 2</h3>
         <div class="price">$19.99</div>
         <button>Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="/assets/product3.jpg" alt="Product 3">
+      </article>
+      <article class="product">
+        <img src="/assets/product3.png" alt="Product 3">
         <h3>Product 3</h3>
         <div class="price">$19.99</div>
         <button>Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="/assets/product4.jpg" alt="Product 4">
+      </article>
+      <article class="product">
+        <img src="/assets/product4.png" alt="Product 4">
         <h3>Product 4</h3>
         <div class="price">$19.99</div>
         <button>Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="/assets/product5.jpg" alt="Product 5">
+      </article>
+      <article class="product">
+        <img src="/assets/product5.png" alt="Product 5">
         <h3>Product 5</h3>
         <div class="price">$19.99</div>
         <button>Add to Cart</button>
-      </div>
-      <div class="product">
-        <img src="/assets/product6.jpg" alt="Product 6">
+      </article>
+      <article class="product">
+        <img src="/assets/product6.png" alt="Product 6">
         <h3>Product 6</h3>
         <div class="price">$19.99</div>
         <button>Add to Cart</button>
-      </div>
+      </article>
     </div>
    </section>
+  
+   <footer>
+    <div class="container">
+      <div class="footer-left">
+        <p>Copyright © 2022 Scents</p>
+      </div>
+      <div class="footer-right">
+        <div class="footer__menu">
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Use</a>
+        </nav>
+      </div>
+    </div>
+  </footer>
   
   </body>
 </html>
