--- a/products/cart.html
+++ b/products/cart.html
@@ -21,6 +21,32 @@
     />
 </head>
 <body>
-    
+  <div class="cart__container">
+  <h2 class="cart__hd">shopping cart</h2>
+
+  <table class="cart__table">
+    <tr>
+      <th>product name</th>
+      <th>amount</th>
+      <th>price</th>
+    </tr>
+    <tr>
+      <td>Diamond ring</td>
+      <td>1</td>
+      <td>$1349</td>
+    </tr>
+    <tr>
+      <td>Gift package</td>
+      <td>1</td>
+      <td>$5</td>
+    </tr>
+    <tr>
+    <td colspan="2" class="tr__border">Total</td>
+    <td>$1354</td>
+    </tr>
+  </table>
+  
+  <button class="checkout__btn">Check Out</button>
+  </div>
 </body>
 </html>
