--- a/products/user-acount.html
+++ b/products/user-acount.html
@@ -22,11 +22,12 @@
 </head>
 <body>
   <main class="user__acnt">
-    <h2>Welcome to your account</h2>
-    <a href="#">My purchases</a>
-    <a href="#">My returns</a>
-    <a href="#">My profile</a>
-    <a href="#">Setting</a>
+    <h2 class="user__acnt-hd">Welcome to your account</h2>
+    <a class="user__acnt-lnk link1"
+    href="#">My purchases</a>
+    <a class="user__acnt-lnk link2" href="#">My returns</a>
+    <a class="user__acnt-lnk link3" href="#">My profile</a>
+    <a class="user__acnt-lnk link4" href="#">Setting</a>
   </main>
 </body>
 </html>
