--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
 
             <div class="nav-midle">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input class="serch" type="text">
+                <input id="serch" class="serch" type="text">
+                <label for="serch"></label>
             </div>
 
             <div class="nav-right">
                 <ul class="list-elements">
-                    <li class="list__item"><a class="nav-link" href="login.html" target="_blank"><i class="fa-solid fa-user list__icon"></i></a></li>
-                    <li class="list__item"><a class="nav-link" href="#main-footer"><i class="fa-solid fa-address-card list__icon"></i></a></li>
-                    <li class="list__item"><a class="nav-link" href="cart.html" target="_blank"><i class="fa-solid fa-cart-shopping list__icon"></i></a></li>
+                    <li class="list__item"><a class="nav-link" href="login.html" target="_blank"><i class="fa-solid fa-user list__icon"></i> Login</a></li>
+                    <li class="list__item"><a class="nav-link" href="#main-footer"><i class="fa-solid fa-address-card list__icon"></i> Contacts</a></li>
+                    <li class="list__item"><a class="nav-link" href="cart.html" target="_blank"><i class="fa-solid fa-cart-shopping list__icon"></i> Cart</a></li>
                 </ul>
             </div>
         </div>
@@ -257,7 +258,7 @@
             <!-- <div class="nav-bar-footer"> -->
                 <div class="nav-left">
                     <ul class="list-elements">
-                        <li class="list__item"><a href="#main-nav"><i class="fa-solid fa-house list__icon"></i></a></li>
+                        <li class="list__item"><a href="#main-nav"><i class="fa-solid fa-house list__icon"></i> Home</a></li>
                         <li class="list__item"><a class="nav-link" href="#Furniture">Furniture</a></li>
                         <li class="list__item"><a class="nav-link" href="Acceccories">Accessories</a></li>
                     </ul>
@@ -269,9 +270,9 @@
     
                 <div class="nav-right">
                     <ul class="list-elements">
-                        <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-facebook list__icon"></i></a></li>
-                        <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-youtube list__icon"></i></a></li>
-                        <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-square-instagram list__item"></i></a></li>
+                        <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-facebook list__icon"></i> FB</a></li>
+                        <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-youtube list__icon"></i> Youtube</a></li>
+                        <li class="list__item"><a class="nav-link" href="#"><i class="fa-brands fa-square-instagram list__icon"></i> Insta</a></li>
                     </ul>
                 </div>
             <!-- </div> -->
