--- a/menu.html
+++ b/menu.html
@@ -160,12 +160,8 @@
 
 
     <!-- footer section starts here  -->
-        <footer class="footer">
-            <!-- <div class="footer-content">
-                <h2>Privacy Policy</h2>
-                <h2>Terms & Conditions</h2>
-            </div>
-            <br> -->
+        <!-- <footer class="footer">
+          
             <div class="footer__para">
                 <p>
                     <h2><i class="fas fa-map-marker"></i>Utrecht, Netherlands</h2>
@@ -192,7 +188,7 @@
 
         </footer>
 
-
+ -->
 
 
     <!-- footer section ends here  -->
