--- a/resarvation.html
+++ b/resarvation.html
@@ -50,7 +50,34 @@
 
     <!-- navbar ends here -->
 <main>
-
+    <section class="resarvation">
+            <h2 class="section-title text-center">Resarvation</h2>
+        <div class="card">
+            <form action="" class="form">
+                <div class="form-control flex-center">
+                    <label for="name">Mr./Mrs.</label>
+                    <input type="text" id="name" required autocomplete="name"/>
+                </div>
+            </form>
+        </div>
+        <div class="card">
+            <form action="" class="form">
+                <div class="form-control flex-center">
+                    <label for="name">Contact Details</label>
+                    <input type="text" id="name" required autocomplete="name"/>
+                </div>
+            </form>
+        </div>
+        <div class="card">
+            <form action="" class="form">
+                <div class="form-control flex-center">
+                    <label for="name">Booking For</label>
+                
+                    <input type="text" id="name" required autocomplete="name"/>
+                </div>
+            </form>
+        </div>
+        </section>
 
 
 
@@ -68,11 +95,7 @@
 
     <!-- footer section starts here  -->
         <footer class="footer">
-            <!-- <div class="footer-content">
-                <h2>Privacy Policy</h2>
-                <h2>Terms & Conditions</h2>
-            </div>
-            <br> -->
+           
             <div class="footer__para">
                 <p>
                     <h2><i class="fas fa-map-marker"></i>Utrecht, Netherlands</h2>
