fixed cart icon

--- a/html/cart.html
+++ b/html/cart.html
@@ -18,7 +18,7 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
-
+    <link rel="stylesheet" href="../styles/cart.css">
     <title>Cart Dalaman</title>
 </head>
 
@@ -28,15 +28,15 @@
             <img src="../images/Icon Logo-06.png" alt="Shop's logo" class="header__logo">
             <img src="../images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text">
             <div class="header__cart">
-                <a href="../html/cart.html">
+                <a href="../html/cart.html" id="cart-link">
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                    <div id="cart-counter">2</div>
                 </a>
-                <div id="cart-counter">2</div>
             </div>
         </header>
         <nav>
             <ul>
-                <li><a href="#" area-label="Visit home page">Home</a></li>
+                <li><a href="../html/index.html" area-label="Visit home page">Home</a></li>
                 <li><a href="#" area-label="Visit about page">About</a></li>
                 <li><a href="#" area-label="Visit specials page">Specials</a></li>
                 <li><a href="#" area-label="Visit partners page">Partnership</a></li>
