--- a/html/login.html
+++ b/html/login.html
@@ -28,10 +28,10 @@
             <img src="../images/Icon Logo-06.png" alt="Shop's logo" class="header__logo">
             <img src="../images/Text Logo-Color 2.png" alt="Shop's logo" class="header__logo-text">
             <div class="header__cart">
-                <a href="../html/cart.html">
+                <a href="../html/cart.html" id="cart-link">
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                    <div id="cart-counter">2</div>
                 </a>
-                <div class="cart-counter">2</div>
             </div>
         </header>
         <nav>
