ecommerce project created

--- a/cart.html
+++ b/cart.html
@@ -65,7 +65,7 @@
            </div>
         </div>    
         <div class="cart__item flex-space-around">
-           <input type="checkbox" name="" id=""/> 
+           <input type="checkbox" name="checkbox" id="order"/> 
            <img src="./biryani.jpg" alt="biryani" class="cart__item-img">
         
         <div class="cart__item-desciption">
