--- a/html/index.html
+++ b/html/index.html
@@ -31,42 +31,48 @@
                     <i class="fa-solid fa-cart-shopping cart-icon">
                         <div id="cart-counter">2</div>
                     </i>
-                    <!-- <div id="cart-counter">2</div> -->
                 </a>
             </div>
         </header>
         <nav>
             <ul>
-                <li><a href="#" area-label="Visit home page">Home</a></li>
-                <li><a href="#" area-label="Visit about page">About</a></li>
-                <li><a href="#" area-label="Visit specials page">Specials</a></li>
+                <li><a href="./index.html" area-label="Visit home page">Home</a></li>
+                <li><a href="#about" area-label="Visit about page">About</a></li>
+                <li><a href="#coffee-varieties" area-label="Visit specials page">Specials</a></li>
                 <li><a href="#" area-label="Visit partners page">Partnership</a></li>
             </ul>
         </nav>
         <main>
             <section class="welcome">
                 <h1 class="welcome__header">Welcome to the coziest coffee shop!</h1>
-                <button class="welcome__btn">To The Shop</button>
+                <button class="welcome__btn"><a href="#coffee-varieties">To The Shop</a> </button>
                 <a href="../html/login.html" id="login-link">
                     <i class="fa-solid fa-house-user welcome__icon"></i>
                     <span area-label="Login or register here" class="welcome__login">Login</span>
                 </a>
             </section>
-            <section class="about">
+            <section class="about" id="about"> 
                 <h2 class="about__header">About Our Shop</h2>
                 <article class="about__content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores obcaecati inventore velit
                         accusantium quae illum debitis. Accusamus molestias atque consequuntur magnam officiis harum,
                         obcaecati repellendus illum debitis nobis expedita qui? Lorem ipsum dolor, sit amet consectetur
+                        adipisicing elit.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores obcaecati inventore velit
+                        accusantium quae illum debitis. Accusamus molestias atque consequuntur magnam officiis harum,
+                        obcaecati repellendus illum debitis nobis expedita qui? Lorem ipsum dolor, sit amet consectetur
                         adipisicing elit. Cupiditate numquam laudantium dolore illo omnis corporis esse ex itaque cum
                         nemo eum totam, exercitationem maiores deserunt, nihil, eveniet eius vel iste?
-                        Deleniti alias ullam amet nostrum vero in maxime cumque, rerum cum aspernatur minus nulla
-                        provident. Praesentium modi ex officia ab. Sit architecto aliquid at ipsum mollitia saepe porro
-                        voluptatibus eveniet!
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores obcaecati inventore velit
+                        accusantium quae illum debitis. Accusamus molestias atque consequuntur magnam officiis harum,
+                        obcaecati repellendus illum debitis nobis expedita qui? Lorem ipsum dolor, sit amet consectetur
+                        adipisicing elit.
                     </p>
                 </article>
             </section>
-            <section class="coffee-varieties">
+            <section class="coffee-varieties" id="coffee-varieties">
                 <h2 class="coffee-varieties__header">Coffee varieties</h2>
                 <div class="coffee-varieties__content">
                     <div class="coffee-card">
@@ -76,14 +82,11 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/bourbonBeans.png" alt="Bourbon Coffee Beans Picture">
                             <p>Bourbon is the other of the two main varieties of Arabica,
-                                along with Typica. It was created on the Island of Bourbon in the 18th century. The
-                                variety
-                                arrived into Brazil late 19th century and quickly spread around South and Middle
-                                America.
-                                Bourbon isn’t an extremely productive variety, but produces an excellent cup of coffee.
-                                Multiple variations have been developed from Bourbon.</p>
+                                along with Typica. It was created on the Island of Bourbon in the 18th century.</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -93,10 +96,11 @@
                             <img src="../images/coffeeProducts/catimorBeans.png" alt="Catimor Coffee Beans Picture">
                             <p>Catimor is a mix between Caturra and Timor, that was created in Portugal in 1959. Due to
                                 Timor being a variety of Robusta, Catimors acidity is low and the flavor is a bit
-                                bitter. However, Catimor is a great match for the environment in Indonesia and it
-                                produces pleasantly herbal flavors.</p>
+                                bitter.</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -107,7 +111,9 @@
                             <p>Catuai is a hybrid of Caturra and Mundo Novo. It was created in Brazil in the 1940s and
                                 it was created to be more productive, but equally high quality as Caturra.</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -116,10 +122,11 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/caturraBeans.png" alt="Caturra Coffee Beans Picture">
                             <p>Caturra was created in Brazil in the 1930’s. The variety is based on a natural mutation
-                                of Bourbon. It is a bit lower than Bourbon and has more branches, which makes Caturra a
-                                bit more productive. Quality-wise it is a very close match to Bourbon.</p>
+                                of Bourbon.</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -128,12 +135,12 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/heirloomBeans.png" alt="Heirloom Coffee Beans Picture">
                             <p>Heirloom is an Ethiopian wild variety, that is an inheritor of the original coffee bushes
-                                growing in the Ethiopian forests. Nowadays Heirloom has multiple recognizable variants
-                                and depending on the village, Heirloom is always slightly different. Heirloom
-                                sub-varieties include Kurume and Welicho and its flavor is pleasantly acidity and juicy.
+                                growing in the Ethiopian forests. Nowadays Heirloom has multiple recognizable variants.
                             </p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -142,10 +149,12 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/geishaBeans.png" alt="Geisha Coffee Beans Picture">
                             <p>Geisha (also Gesha) is a high-quality variety, that is especially found in Panama. It is
-                                originally from the Ethiopian village of Gesha. Nowadays the Geisha from Panama is
-                                considered one of the best coffees in the world and has an extremely high price.</p>
+                                originally from the Ethiopian village of Gesha. 
+                            </p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -154,10 +163,12 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/mundoNovoBeans.png" alt="Mundo Novo Coffee Beans Picture">
                             <p>Mundo Novo is a mix between Bourbon and Typica. The variety was created in the 1940’s and
-                                is especially suited for the Brazilian growth conditions. Because of its high yield, it
-                                is one of the most famous coffee varieties grown in Brazil.</p>
+                                is especially suited for the Brazilian growth conditions.
+                            </p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -166,13 +177,11 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/SL28&SL34Beans.png" alt="SL28 & SL34 Coffee Beans Picture">
                             <p>SL28 & SL34 grow in Kenya. Most of the high quality coffees from Kenya include both of
-                                these varieties. SL comes from Scott Laboratories, a company that the Kenyan government
-                                hired in the 1930’s to create a productive and resistant coffee variety. They failed in
-                                their given mission, but managed to create the SL28 and SL34 varieties, that have an
-                                intensely citrusy, sweet and multidimensional flavor profiles. SL28 and SL34 are some of
-                                the most expensive ones, when it comes to raw coffees.</p>
+                                these varieties. SL comes from Scott Laboratories, a company that the Kenyan government..</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -181,10 +190,12 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/timorBeans.png" alt="Timor Coffee Beans Picture">
                             <p>Timor (also Tim Tim) is a natural mix of Arabica and Robusta that was found on the island
-                                of Timor in the 1940’s. Because of the Robusta, the coffee is great at surviving with
-                                leaf rust. Timor is very rarely the lone variety in coffees.</p>
+                                of Timor in the 1940’s..
+                            </p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -194,10 +205,11 @@
                             <img src="../images/coffeeProducts/typicaBeans.png" alt="Typica Coffee Beans Picture">
                             <p>Typica (also Tipica) is the forefather of coffees. It has spread around the world and it
                                 has adapted to local climates, creating many different variations like Kona (Hawaii) and
-                                Blue Mountain (Jamaica). Typically, Typicas yield is small, but the quality is extremely
-                                high. The flavor is often magnificently sweet and clean.</p>
+                                Blue Mountain (Jamaica)..</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -206,11 +218,11 @@
                         <div class="coffee-card__content">
                             <img src="../images/coffeeProducts/variedadColombiaBeans.png" alt="Variedad Colombia Coffee Beans Picture">
                             <p>Variedad Colombia (sometimes just Colombia) is a hybrid of Caturra, created in Colombia.
-                                The strain is very productive and great at surviving leaf diseases. These have made
-                                Variedad Colombia a popular coffee variety. The flavor includes notes like classic
-                                caramel and chocolate.</p>
+                                The strain is very productive and great at surviving leaf diseases..</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
                     <div class="coffee-card">
                         <div class="coffee-card__header">
@@ -221,9 +233,10 @@
                             <p>Yellow Bourbon, Red Bourbon and Pink Bourbon are all natural mutations of Bourbon. Their
                                 productivity is quite low, but the flavor makes up for the size of the yield.</p>
                         </div>
-                        <div class="coffee-card__footer"></div>
+                        <div class="coffee-card__footer">
+                            <button class="btn">Discover More</button>
+                        </div>
                     </div>
-
                 </div>
             </section>
 
